--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -218,6 +218,7 @@ import CallToAction from '../../components/CallToAction.astro';
 
 	.service-item.active .service-content {
 		max-height: 200px;
+		overflow: auto;
 		transition: max-height 0.3s ease-in;
 	}
 
