--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ import certImage from '../../public/cert.png';
 				</div>
 
 				<div class="lg:col-span-1 order-1 lg:order-2 flex justify-center lg:justify-end">
-					<Image src={headshotImage} alt="Dr. Richard T. Samson" class="w-84 h-98 object-cover rounded-full shadow-lg" loading="eager" />
+					<Image src={headshotImage} alt="Dr. Richard T. Samson" class="w-84 h-98 object-cover rounded-full shadow-lg" loading="lazy" />
 				</div>
 			</div>
 		</div>
@@ -69,7 +69,7 @@ import certImage from '../../public/cert.png';
 			<div class="space-y-4">
 				<div class="flex flex-row items-center gap-4 md:gap-8 lg:gap-12">
 					<div class="flex-shrink-0 w-24 sm:w-28 md:w-32 lg:w-48">
-						<Image src={certImage} alt="Medical Certification" class="w-full h-auto" />
+						<Image src={certImage} alt="Medical Certification" class="w-full h-auto" loading="lazy" />
 					</div>
 
 					<div class="flex-1">
