--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,5 +1,6 @@
 ---
 import { getCollection, type CollectionEntry } from 'astro:content';
+import { Image } from 'astro:assets';
 import ContentLayout from '../../layouts/ContentLayout.astro';
 import CallToAction from '../../components/CallToAction.astro';
 
@@ -47,10 +48,13 @@ function formatDate(date: Date): string {
       <!-- image -->
       {post.data.image && (
         <div class="mb-8 rounded-lg overflow-hidden">
-          <img
+          <Image
             src={post.data.image}
             alt={post.data.title}
             class="w-full h-64 md:h-80 object-cover"
+            width={1200}
+            height={630}
+            loading="eager"
           />
         </div>
       )}
