updated information for SEO, tried to improve lighthouse score

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import logoImage from '../../public/logo/just_foot.png';
+import logoImage from '../../public/logo/just_foot_optimized.png';
 ---
 
 <nav class="sticky top-0 z-50 bg-gray-900 shadow-lg">
