updated netlify form and added success confirmation page

--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -99,6 +99,7 @@ import ContentLayout from '../../layouts/ContentLayout.astro';
         <form
           name="contact"
           method="POST"
+          action="/contact/success"
           data-netlify="true"
           data-netlify-honeypot="bot-field"
           class="space-y-6"
