added json for seo optimization

--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -25,6 +25,7 @@ const { title, description = "Samson Foot + Ankle - Oakland, Maine podiatrist of
     <meta property="og:type" content="website" />
 
     <title>{title}</title>
+    <slot name="head" />
   </head>
   <body class="bg-gray-50 text-gray-700 font-sans m-0 p-0 min-h-screen flex flex-col">
     <Header />
