--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -2,7 +2,7 @@
 import ContentLayout from '../../layouts/ContentLayout.astro';
 ---
 
-<ContentLayout title="Contact Us">
+<ContentLayout title="Contact Us - Samson Foot and Ankle" description="Contact Samson Foot + Ankle in Oakland, Maine. Call 207-458-1809 or send us a message to schedule your podiatry appointment. Located at 20 Main St, Oakland, ME 04963.">
   <div class="max-w-4xl mx-auto px-4 sm:px-6">
 
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 lg:gap-12">
