removed tebra schedule appointments

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -118,8 +118,8 @@ import certImage from '../../public/cert.png';
 
 				<!-- Second row: Book appointment button -->
 				<div class="buttons-row-2 text-center">
-					<a href="https://www.tebra.com/care/provider/richard-samson-dpm-1447251913" target="_blank" class="inline-block bg-gray-900 hover:bg-gray-800 text-white text-base md:text-xl font-medium px-5 md:px-8 py-2 md:py-4 rounded-md hover:text-blue-300 transition-all duration-300 no-underline">
-						Book Your Appointment
+					<a href="/contact/" class="inline-block bg-gray-900 hover:bg-gray-800 text-white text-base md:text-xl font-medium px-5 md:px-8 py-2 md:py-4 rounded-md hover:text-blue-300 transition-all duration-300 no-underline">
+						Contact to Book Your Appointment
 					</a>
 				</div>
 			</div>
