--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -74,30 +74,10 @@ import ContentLayout from '../../layouts/ContentLayout.astro';
             </div>
           </div>
 
-          <div class="flex items-center space-x-3">
-            <svg class="w-5 h-5 text-blue-600 flex-shrink-0 p-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
-            </svg>
-            <div>
-              <div class="text-gray-700">
-
-                <p>
-                  <b>Book Appointment</b> 
-                  <br>
-                  <a href="https://www.tebra.com/care/provider/richard-samson-dpm-1447251913"
-                  target="_blank"
-                  class="text-blue-600 hover:text-blue-400 transition-colors duration-300 no-underline">
-                    Book Your Appointment
-                  </a>
-                </p>
-              </div>
-            </div>
-          </div>
-
         </div>
 
         <!-- emergencies -->
-        <div class="mt-2 sm:mt-8 p-4 bg-white rounded-lg shadow-sm">
+        <div class="hidden sm:block mt-2 sm:mt-8 p-4 bg-white rounded-lg shadow-sm">
           <div class="flex items-center space-x-3">
             <span class="text-3xl flex-shrink-0 p-2">⚠️</span>
             <div>
