--- a/src/pages/office/index.astro
+++ b/src/pages/office/index.astro
@@ -1,6 +1,5 @@
 ---
 import ContentLayout from '../../layouts/ContentLayout.astro';
-import CallToAction from '../../components/CallToAction.astro';
 
 const officePhotos = [
   '/office/IMG_8613.JPEG',
@@ -95,14 +94,6 @@ const officePhotos = [
       <div id="office-map" class="w-full h-80 rounded-lg shadow-lg border border-gray-200" style="z-index: 1; position: relative;"></div>
     </div>
   </section>
-
-  <div>
-    <CallToAction
-      title="Ready to Experience Direct Care?"
-      description="Take the first step toward personalized, hassle-free podiatric care."
-      showContactButton={false}
-    />
-  </div>
 </ContentLayout>
 
 
@@ -117,7 +108,7 @@ const officePhotos = [
   import { Splide } from '@splidejs/splide';
 
   // Load external scripts dynamically
-  function loadScript(src) {
+  function loadScript(src: string) {
     return new Promise((resolve, reject) => {
       const script = document.createElement('script');
       script.src = src;
